<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SelectNetActivity">

    <LinearLayout
        android:id="@+id/SelectNet_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TextViewSelectWhat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20"
            android:text="@string/select_what" />

       <RadioGroup
           android:id="@+id/radioGroup_url"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           >
           <RadioButton
               android:id="@+id/RadioButtonSelectVideo"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/dimen_10"
               android:text="@string/nav_select_video" />

           <RadioButton
               android:id="@+id/RadioButtonSelectAudio"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/dimen_10"
               android:text="@string/nav_select_audio" />

           <RadioButton
               android:id="@+id/RadioButtonSelectPicture"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/dimen_10"
               android:text="@string/nav_select_picture" />
       </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/editText_url"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_150"
        android:layout_margin="@dimen/dimen_20"
        android:gravity="top"
        android:hint="@string/select_url"
        app:layout_constraintTop_toBottomOf="@id/SelectNet_LinearLayout" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginLeft="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_marginRight="@dimen/dimen_50"
        android:background="@drawable/radiusbutton"
        android:text="@string/confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_url"
        />

</androidx.constraintlayout.widget.ConstraintLayout>