<?xml version="1.0" encoding="utf-8"?><!--协调者布局-->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--增加了滑动特性LinearLayout 严重依赖于CoordinatorLayout-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/clipAppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100">
        <!--一起滚动 折叠之后留在界面
        可折叠ToolBar 需作为AppBarLayout的子项-->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/clipCollapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <!--在折叠过程中产生错位偏移-->
            <ImageView
                android:id="@+id/clipImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/clipToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/clipSource1"
                android:layout_width="@dimen/dimen_120"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginLeft="@dimen/dimen_50"
                android:layout_marginTop="@dimen/dimen_30"
                android:background="@drawable/radiusbutton"
                android:text="@string/source1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/clipSource2"
                android:layout_width="@dimen/dimen_120"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_50"
                android:background="@drawable/radiusbutton"
                android:text="@string/source2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/clipClip"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginLeft="@dimen/dimen_50"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_50"
                android:background="@drawable/radiusbutton"
                android:text="@string/clip"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clipSource2" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_20"
                app:cardCornerRadius="@dimen/dimen_10"
                app:layout_constraintTop_toBottomOf="@id/clipClip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/slipSource1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10" />

                    <TextView
                        android:id="@+id/slipSource2Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10" />

                    <TextView
                        android:id="@+id/clipLogText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10"
                        android:text="@string/test"
                        android:textSize="@dimen/dimen_font_35" />
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>